[package]
name = "crustacean-capital"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
