[package]
name = "crustacean-capital"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "=0.8.1", features = ["sqlite", "chrono"] }
rusqlite = "=0.32.1"
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
